<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="volver">volver</string>
    <string name="app_name">MisBencineras</string>
    <string name="metros_redonda">Metros a la redonda</string>
	<string name="buscar">BUSCAR</string>
	<string name="registrse">Registrese</string>
	
	
	
    <string name="gas_93">Gasolina 93</string>
    <string name="gas_95">Gasolina 95</string>
    <string name="gas_97">Gasolina 97</string>
    <string name="glp">GLP Vehicular</string>
    <string name="gnc">GNC</string>
    <string name="kerosene">Kerosene</string>
    <string name="diesel">Petroleo Diesel</string>
    
    
    
    <string-array name="arreglo_distancias">
        <item>1000</item>
        <item>2000</item>
        <item>3000</item>
        <item>4000</item>
        <item>5000</item>
        <item>6000</item>
        <item>7000</item>
    </string-array>
    
<string name="seleccione_tipo_combustible">Seleccione tipo combustible</string>
    
    <string-array name="arreglo_combustibles">
        <item>Gasolina 93</item>
        <item>Gasolina 95</item>
        <item>Gasolina 97</item>
        <item>GLP Vehicular</item>
        <item>GNC</item>
        <item>Kerosene</item>
        <item>Petroleo Diesel</item>
    </string-array>
    
    
    <string name="combustible">Tipos combustible</string>
    <string name="vacio"/>
    <string name="precio">Precio</string>
    <string name="direccion">Direccion</string>
    <string name="metros">metros</string>
    
    <string name="paraIngresar">Para ingresar por favor completa los siguientes datos</string>
    <string name="mail">E-mail</string>
    <string name="confirme_mail">Confirme e-mail</string>
    <string name="pass">contraseña</string>
    <string name="confirme_pass">Confirme contraseña</string>
    <string name="automobil">Marca automovil</string>
    <string name="modelo">Modelo</string>
    <string name="anio">año</string>
    <string name="enviar">Enviar</string>

    <string name="concentimiento">Desea recivir noticias y promociones</string>

    <string name="inicieSession">Inicie session</string>

    <string name="servicentro">Servicentro</string>




        
    
</resources>