<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
            android:orientation="vertical" style="@style/fondoPantallas">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.53"
        android:orientation="horizontal" android:background="@drawable/list_selector_default">

    <TextView
        android:id="@+id/textViewEmpresa"
        android:layout_width="91dp"
        android:layout_height="fill_parent"
        android:gravity="left|center_vertical"
        android:lines="2"
        android:maxLines="3"
        android:paddingRight="1pt"
        android:text="@string/vacio"
        android:textColor="@color/white" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="2pt"
                android:textColor="@color/white"
                android:text="@string/precio" />


            <TextView
                android:id="@+id/textViewPrecio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="2pt"
                style="@style/TextoDetalles"
                android:text="@string/vacio" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/metros" />


            <TextView
                android:id="@+id/textViewMetros"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextoDetalles"
                android:text="@string/vacio" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >


            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/combustible" />


            <TextView
                android:id="@+id/textViewCombus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextoDetalles"
                android:text="@string/vacio" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/direccion" />
            <TextView
                android:id="@+id/textViewDir"
                android:layout_width="91dp"
                android:layout_height="wrap_content"
                android:lines="4"
                android:maxLines="4"
                android:text="@string/vacio"
                style="@style/TextoDetalles" />

        </TableRow>

    </TableLayout>

    </LinearLayout>

    <com.google.android.maps.MapView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/mapview"
        android:layout_width="fill_parent"
        android:layout_height="338dp"
        android:apiKey="06LOup7UI9QvKpoPhT77MIZVNlQmkVfS_FKfEGg"
        android:clickable="true" />
    <Button
        android:id="@+id/BtnVolver"
		style="@style/ButtomGreyLabelStyle"
        android:onClick="volver"
        android:text="@string/volver"
        android:drawableRight="@drawable/ic_menu_revert" />

</LinearLayout>
