<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@color/transparent"
    android:padding="8dp">

    <TextView
        android:id="@+id/textViewEmpresa"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:gravity="left|center_vertical"
        android:text="TextView"
        android:textColor="@color/white" android:paddingRight="5pt" android:maxLines="2" android:lines="2"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="2pt"
                android:textColor="@color/white"
                android:text="@string/precio" />

            <TextView
                android:id="@+id/textViewPrecio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="2pt"
                android:paddingLeft="8pt"
                android:textColor="@color/white"
                android:text="TextView" android:gravity="top|left"/>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/metros" />

            <TextView
                android:id="@+id/textViewMetros"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8pt"
                android:textColor="@color/white"
                android:text="TextView" android:gravity="top|left"/>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/combustible" />

            <TextView
                android:id="@+id/textViewCombus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8pt"
                android:textColor="@color/white"
                android:text="TextView" android:gravity="top|left"/>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/direccion" />

            <TextView
                android:id="@+id/textViewDir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|left"
                android:lines="3"
                android:maxLines="4"
                android:paddingLeft="8pt"
                android:text="TextView"
                android:textColor="@color/white" />

        </TableRow>

    </TableLayout>

</LinearLayout>