<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/fondoPantallas"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/linearLayout1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            style="@style/TextoTitulosSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingLeft="10dp"
            android:text="@string/metros_redonda" />

        <Spinner
            android:id="@+id/spinnerMetros"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/arreglo_distancias"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:prompt="@string/metros_redonda" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/linearLayout1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView3"
            style="@style/TextoTitulosSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="20dp"
            android:text="@string/servicentro" />

        <Spinner
            android:id="@+id/spinnerServicentros"
            android:layout_width="186dp"
            android:layout_height="wrap_content"
            android:paddingTop="10dp" android:paddingLeft="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout2"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/linearLayout1"
        android:orientation="vertical" android:paddingLeft="20dp">

        <TextView
            android:id="@+id/textView2"
            style="@style/TextoTitulosSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingLeft="5dp"
            android:text="@string/tipos_combustible" />

        <Spinner
            android:id="@+id/spinnerCombustible"
            android:layout_width="148dp"
            android:layout_height="wrap_content"
            android:entries="@array/arreglo_combustibles"
            android:paddingTop="10dp" android:paddingLeft="5dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/button1"
        style="@style/ButtomGreyLabelStyle"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="consultar"
        android:text="@string/buscar" 
        android:drawableRight="@drawable/ic_menu_search"/>

</RelativeLayout>